--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+    --color1: #1D1E20;
+    --color2: #2E2E33;
+    --color3: #DBBC4D;
+    --color4: #DADADB;
+    --color5: #4EB1D4;
+}
+
 html {
     box-sizing: border-box;
 }
@@ -22,6 +30,19 @@ html, body {
     font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     line-height: 1.5;
+    background-color: var(--color2);
+    color: var(--color4);
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.main {
+    flex: 1 1 auto;
 }
 
 button {
@@ -44,4 +65,25 @@ li {
 .container {
     width: 768px;
     margin: 0 auto;
+    height: 100%;
+}
+
+.header, .footer {
+    background-color: var(--color1);
+    text-align: center;
+}
+
+.header {
+    padding: 40px 0;
+}
+
+.title {
+    color: var(--color3);
+    font-size: 2rem;
+    text-transform: uppercase;
+}
+
+.icon {
+    width: 128px;
+    height: 128px;
 }
